2003-01-13  Jody Goldberg <jody@gnome.org>

	* gnome-theme-manager.c (load_meta_themes) : handle yet another place
	  where gnome_wm_manager_get_current may be NULL.

Mon Jan 13 15:20:17 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-manager.c (main): gnome_theme_init ()

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Makefile.am (EXTRA_DIST) : dist the pixmaps too.

2003-01-08  Anders Carlsson  <andersca@codefactory.se>

	* gnome-theme-manager.c: (update_font_button_state),
	(font_key_changed), (apply_font_clicked), (setup_dialog):
	* gnome-theme-manager.h:
	Add support for applying fonts.
	
	* theme-thumbnail.c: (create_image):
	Allow SVG files as icons.
	
2003-01-08  Jody Goldberg <jody@gnome.org>

	* gnome-theme-details.c (gnome_theme_details_update_from_gconf) :
	  handle lack of metacity.
	(window_theme_selection_changed) : ditto.
	(gnome_theme_details_reread_themes_from_disk) : ditto.

Wed Jan  8 01:57:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (add_initial_row_to_meta_theme): handle
	initial theme as custom.

	* TODO: update

Tue Jan  7 03:10:36 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-save.c (save_dialog_response): add a description
	entry.  Still needs escaping.

	* theme-thumbnail.c (generate_theme_thumbnail): read the thumbnail
	back from the child correctly.  I think thumbnailing fully works.

	* TODO: Update

2003-01-06  Seth Nickell  <snickell@stanford.edu>

	* gnome-theme-manager.c: (load_meta_themes):
	* theme-properties.glade:

	Removed #if 0'd code for hard-coding minimuum height
	of the tree view. Use glade properties to set minimuum
	height to a more reasonable value. Its hard to find
	items when you only see two in the scroll-view at
	any given time, and many people do not think to
	resize windows (nor should they have to :-)
	
2003-01-06  Seth Nickell  <snickell@stanford.edu>
