@@ -1,3 +1,11 @@
+Tue Jan 14 02:16:22 2003  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-theme-manager.c (load_meta_themes): set the correct row to
+	the new data.  This was messing a lot up.  Saving now works, so
+	long as you don't type bad data.
+
+	* TODO: update.
+
 2003-01-13  Jody Goldberg <jody@gnome.org>
 
 	* gnome-theme-manager.c (load_meta_themes) : handle yet another place
